--- a/index.html
+++ b/index.html
@@ -26,8 +26,32 @@
         </div>
     </div>
 
-    <div class="information"></div>
-    <div class="quote"></div>
+    <div class="information">
+        <h1 id="information-title">Some random information.</h1>
+        <div class="images">
+            <div class="info">
+                <div class="info-images"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="info-images"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="info-images"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="info-images"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="quote">
+        <div class="quote-text"></div>
+        <div class="speaker"></div>
+    </div>
     <div class="action"></div>
 
     </div>
