--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@
         <div class="quote-text">This is an inspiring quote or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="speaker">-Thor, God of Thunder</div>
     </div>
-    
-    <div class="action"></div>
+
+    <div class="action">
+        <div class="poster">
+            <div class="poster-text">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
 
     </div>
 
